# MarketPy

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  AUTONOMOUS_TRADING_GUIDE.md  Dockerfile  Dockerfile.worker  README.md  START_HERE.md  WHERE_TO_CHECK_AUTONOMOUS.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_backend.py  test_results.txt  workspace.txt
.github/workflows/: cd.yml  check-duplicates.yml  ci.yml  frontend-lint.yml  staging-smoke.yml
.hypothesis/constants/: 014b502d71a9f61f  032b303c5c00f2cf  04fcb85dd2e325bc  055010bba2f66420  (+171 more)
backend/: __init__.py
config/: dev.yaml  exchanges.yaml  openclaw.json  prod.yaml  realtime_updates.json  staging.yaml
data/: metrics.db  prediction_tracking.json
deploy/: docker-compose.staging.yml  staging-smoke-report.md
docs/: README.md  api-documentation.md  api.md  architecture.md  configuration.md  developer-guide.md  external-library-integration-guide.md  external-library-rollout.md  migration-notes-phase41.md  operations-guide.md  realtime-deployment-guide.md  realtime-updates.md  user-guide.md  user-guides.md
frontend/: .env.example  .env.local  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
k8s/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  datastores-services.yaml  datastores-statefulsets.yaml  ingress.yaml  worker-deployments.yaml
scripts/: README.md  check_duplicate_dataclasses.py  cleanup_project.py  coverage_targets.py  run_comprehensive_tests.ps1  smoke_staging.py
(+522 files in other folders)
