[project]
name = "marketpy"
version = "0.1.0"
description = "Crypto Trading Simulator with AI Price Prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "ccxt>=4.4.60,<5.0.0",
    "vectorbt>=0.27.0,<0.28.0",
    "pandas>=2.2.0,<3.0.0",
    "pandas-ta>=0.3.14b0,<0.4.0",
    "ta>=0.11.0,<0.12.0",
    "polars>=1.20.0",
    "duckdb>=1.2.0",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    "optuna>=4.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "discord.py>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "hypothesis>=6.120.0",
]
backtesting = [
    "vectorbt>=0.27.0,<0.28.0",
]
ml = [
    "pandas-ta>=0.3.14b0,<0.4.0",
    "ta>=0.11.0,<0.12.0",
]
monitoring = [
    "prometheus-client>=0.21.0,<1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]
markers = [
    "property_test: property-based tests validating roadmap correctness properties",
]

[tool.setuptools.packages.find]
include = ["backend*"]
